Removed deprecated method invocation